# QuadraticEq

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: quadratic_equation.c  quadratic_equation.h
tests/: minunit.h  test_quadratic_equation.c
